<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"


    tools:context="coding.quizzaciously.nitpchanakyaunofficial.InfoActivity">

    <TextView
        android:text="@string/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <LinearLayout android:layout_below="@id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll2"
        android:gravity="center_horizontal"
        android:paddingTop="12dp">

        <android.support.v7.widget.AppCompatButton android:elevation="4dp" android:translationZ="4dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:drawableTop="@drawable/ic_share_black_64dp"
            android:id="@+id/share"
            android:theme="@style/RedColoredButton"
            android:text="@string/share" />

        <android.support.v7.widget.AppCompatButton android:elevation="4dp" android:translationZ="4dp"
            android:layout_width="150dp"
            android:drawableTop="@drawable/ic_star_border_black_64dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:theme="@style/GreenColoredButton"
            android:id="@+id/rate"
            android:text="@string/rate"/>

    </LinearLayout>
    <LinearLayout android:layout_below="@id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll1"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:paddingTop="12dp">

        <android.support.v7.widget.AppCompatButton android:elevation="4dp" android:translationZ="4dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:drawableTop="@drawable/ic_feedback_64dp"
            android:id="@+id/feedback"
            android:theme="@style/BlueColoredButton"
            android:text="@string/feedback" />

        <android.support.v7.widget.AppCompatButton android:elevation="4dp" android:translationZ="4dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:theme="@style/PurpleColoredButton"
            android:drawableTop="@drawable/ic_us"
            android:id="@+id/apps"
            android:text="@string/ourapps"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versionName"
        android:gravity="center"
        android:layout_below="@id/ll1"
        android:id="@+id/versionText"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:id="@+id/scv"
        android:layout_below="@id/versionText">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disc_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/disclaimer"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
